fix: hero section image layout issue(fixed)

--- a/app/components/Category/Category.module.css
+++ b/app/components/Category/Category.module.css
@@ -70,6 +70,8 @@
   position: relative;
   width: 100%;
   overflow: hidden;
+  height: 15vw;
+  min-height: 70px;
 }
 
 .right {
